--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="field_shoe_description">Enter shoe\'s description</string>
     <string name="btn_cancel">Cancel</string>
     <string name="btn_save">Save</string>
+    <string name="error_no_shoes">\There are no shoes added yet. Add some shoes!</string>
 
 </resources>
