Add a divider and empty record checking with substitute text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,9 @@
     <string name="btn_cancel">Cancel</string>
     <string name="btn_save">Save</string>
     <string name="error_no_shoes">\There are no shoes added yet. Add some shoes!</string>
+    <string name="error_no_name">No name added!</string>
+    <string name="error_no_company">No manufacturer added!</string>
+    <string name="error_no_size">No size added!</string>
+    <string name="error_no_description">No description added!</string>
 
 </resources>
